# combine_static_libs

./: CMakeLists.txt  README.md  dummy.cpp  return.mri  return_one.cpp  return_zero.cpp
